@@ -7,6 +7,7 @@ THIS IS NOT A RELEASE YET
   titles when asked for none
 * (T205967) Fix syntax error typo in postgres database upgrade file.
 * (T200254) Add pear/Net_SMTP 1.7.3 to composer dependencies.
+* (T206765) Load installer i18n when running update.php.
 
 == MediaWiki 1.31.1 ==
 
